--- a/configuration/facebook_pipeline_config.json
+++ b/configuration/facebook_pipeline_config.json
@@ -4,14 +4,21 @@
     {
       "SourceType": "Facebook",
       "PageID": "imaqalcampaign",
-      "TokenFileURL": "gs://avf-credentials/imaqalcampaign-facebook-token.txt"
+      "TokenFileURL": "gs://avf-credentials/imaqalcampaign-facebook-token.txt",
+      "Datasets": [
+        {"Name": "facebook_s01e01", "PostIDs": ["427662381371142_792818351522208", "427662381371142_783679525769424"]},
+        {"Name": "facebook_s01e02", "PostIDs": ["427662381371142_770099307127446"]}
+      ]
     }
   ],
   "RapidProKeyRemappings": [
     {"RapidProKey": "avf_facebook_id", "PipelineKey": "uid"},
 
-    {"RapidProKey": "message", "PipelineKey": "facebook_s01e01_raw"},
-    {"RapidProKey": "message_created_time", "PipelineKey": "sent_on"}
+    {"RapidProKey": "facebook_s01e01.message", "PipelineKey": "facebook_s01e01_raw"},
+    {"RapidProKey": "facebook_s01e01.message_created_time", "PipelineKey": "sent_on"},
+
+    {"RapidProKey": "facebook_s01e02.message", "PipelineKey": "facebook_s01e02_raw"},
+    {"RapidProKey": "facebook_s01e02.message_created_time", "PipelineKey": "sent_on"}
   ],
   "ProjectStartDate": "2000-01-01T00:00:00+03:00",
   "ProjectEndDate": "2100-01-01T00:00:00+03:00",
