--- a/configuration/sms_pipeline_config.json
+++ b/configuration/sms_pipeline_config.json
@@ -34,7 +34,8 @@
         "csap_s05_demog",
         "csap_s06_demog",
         "csap_s07_demog",
-        "csap_s08_demog"
+        "csap_s08_demog",
+        "csap_s09_demog"
       ],
       "TestContactUUIDs": [
         "61e74e0b-1b4a-41fe-9e78-712f2a048f4e",
@@ -141,6 +142,17 @@
     {"SourceKey": "Idp_Camp (Time) - csap_s07_demog", "PipelineKey": "in_idp_camp_time"},
     {"SourceKey": "Hh_Language (Text) - csap_s07_demog", "PipelineKey": "household_language_raw"},
     {"SourceKey": "Hh_Language (Time) - csap_s07_demog", "PipelineKey": "household_language_time"},
+
+    {"SourceKey": "Location (Text) - csap_s09_demog", "PipelineKey": "location_raw"},
+    {"SourceKey": "Location (Time) - csap_s09_demog", "PipelineKey": "location_time"},
+    {"SourceKey": "Gender (Text) - csap_s09_demog", "PipelineKey": "gender_raw"},
+    {"SourceKey": "Gender (Time) - csap_s09_demog", "PipelineKey": "gender_time"},
+    {"SourceKey": "Age (Text) - csap_s09_demog", "PipelineKey": "age_raw"},
+    {"SourceKey": "Age (Time) - csap_s09_demog", "PipelineKey": "age_time"},
+    {"SourceKey": "Recently_Displaced (Text) - csap_s09_demog", "PipelineKey": "recently_displaced_raw"},
+    {"SourceKey": "Recently_Displaced (Time) - csap_s09_demog", "PipelineKey": "recently_displaced_time"},
+    {"SourceKey": "Idp_Camp (Text) - csap_s09_demog", "PipelineKey": "in_idp_camp_raw"},
+    {"SourceKey": "Idp_Camp (Time) - csap_s09_demog", "PipelineKey": "in_idp_camp_time"},
 
     {"SourceKey": "Location (Text) - csap_s08_demog", "PipelineKey": "location_raw"},
     {"SourceKey": "Location (Time) - csap_s08_demog", "PipelineKey": "location_time"},
