Add e02 activation flow

--- a/configuration/sms_pipeline_config.json
+++ b/configuration/sms_pipeline_config.json
@@ -28,7 +28,8 @@
       "TokenFileURL": "gs://avf-credentials/csap-secondary-text-it-token.txt",
       "ContactsFileName": "csap_secondary_contacts",
       "ActivationFlowNames": [
-        "csap_s08e01_activation"
+        "csap_s08e01_activation",
+        "csap_s08e02_activation"
       ],
       "SurveyFlowNames": [
         "csap_s04_demog",
