--- a/configuration/facebook_pipeline_config.json
+++ b/configuration/facebook_pipeline_config.json
@@ -10,6 +10,9 @@
           "342722832782775_1496920597362987",
           "342722832782775_1499022967152750",
           "342722832782775_1500052827049764"
+        ]},
+         {"Name": "facebook_s08e02_dhaayow655", "PostIDs": [
+          "342722832782775_1503659086689138"
         ]}
       ]
     },
@@ -22,6 +25,9 @@
           "1584334095169246_2794844634118180",
           "1584334095169246_2797140103888633",
           "1584334095169246_2798289113773732"
+        ]},
+         {"Name": "facebook_s08e02_AbdirizakHAtosh", "PostIDs": [
+          "1584334095169246_2802181710051139"
         ]}
       ]
     },
@@ -33,19 +39,26 @@
         {"Name": "facebook_s08e01_BarnaamijkaHage", "PostIDs": [
           "325301151525528_697701827618790",
           "325301151525528_699376604117979",
-          "325301151525528_700208297368143"
+          "325301151525528_700208297368143",
+          "325301151525528_700986553956984"
+        ]},
+        {"Name": "facebook_s08e02_BarnaamijkaHage", "PostIDs": [
+          "325301151525528_703164037072569"
         ]}
       ]
     },
     {
       "SourceType": "Facebook",
-      "PageID": "M2A-Media-Communication-Consultancy-548414038603623",
+      "PageID": "548414038603623",
       "TokenFileURL": "gs://avf-credentials/M2A-Media-Communication-Consultancy-548414038603623-facebook-token.txt",
       "Datasets": [
         {"Name": "facebook_s08e01_M2A-Media-Communication-Consultancy-548414038603623", "PostIDs": [
           "548414038603623_3190238431087824",
           "548414038603623_3196246417153692",
           "548414038603623_3199269190184748"
+        ]},
+        {"Name": "facebook_s08e02_M2A-Media-Communication-Consultancy-548414038603623", "PostIDs": [
+          "548414038603623_3209732449138422"
         ]}
       ]
     }
@@ -75,7 +88,31 @@
     {"SourceKey": "facebook_s08e01_M2A-Media-Communication-Consultancy-548414038603623.id", "PipelineKey": "facebook_s08e01_comment_id"},
     {"SourceKey": "facebook_s08e01_M2A-Media-Communication-Consultancy-548414038603623.created_time", "PipelineKey": "sent_on"},
     {"SourceKey": "facebook_s08e01_M2A-Media-Communication-Consultancy-548414038603623.parent", "PipelineKey": "facebook_s08e01_comment_reply_to_raw"},
-    {"SourceKey": "facebook_s08e01_M2A-Media-Communication-Consultancy-548414038603623.post", "PipelineKey": "facebook_s08e01_post_raw"}
+    {"SourceKey": "facebook_s08e01_M2A-Media-Communication-Consultancy-548414038603623.post", "PipelineKey": "facebook_s08e01_post_raw"},
+    
+    {"SourceKey": "facebook_s08e02_dhaayow655.message", "PipelineKey": "facebook_s08e02_raw"},
+    {"SourceKey": "facebook_s08e02_dhaayow655.id", "PipelineKey": "facebook_s08e02_comment_id"},
+    {"SourceKey": "facebook_s08e02_dhaayow655.created_time", "PipelineKey": "sent_on"},
+    {"SourceKey": "facebook_s08e02_dhaayow655.parent", "PipelineKey": "facebook_s08e02_comment_reply_to_raw"},
+    {"SourceKey": "facebook_s08e02_dhaayow655.post", "PipelineKey": "facebook_s08e02_post_raw"},
+
+    {"SourceKey": "facebook_s08e02_AbdirizakHAtosh.message", "PipelineKey": "facebook_s08e02_raw"},
+    {"SourceKey": "facebook_s08e02_AbdirizakHAtosh.id", "PipelineKey": "facebook_s08e02_comment_id"},
+    {"SourceKey": "facebook_s08e02_AbdirizakHAtosh.created_time", "PipelineKey": "sent_on"},
+    {"SourceKey": "facebook_s08e02_AbdirizakHAtosh.parent", "PipelineKey": "facebook_s08e02_comment_reply_to_raw"},
+    {"SourceKey": "facebook_s08e02_AbdirizakHAtosh.post", "PipelineKey": "facebook_s08e02_post_raw"},
+    
+    {"SourceKey": "facebook_s08e02_BarnaamijkaHage.message", "PipelineKey": "facebook_s08e02_raw"},
+    {"SourceKey": "facebook_s08e02_BarnaamijkaHage.id", "PipelineKey": "facebook_s08e02_comment_id"},
+    {"SourceKey": "facebook_s08e02_BarnaamijkaHage.created_time", "PipelineKey": "sent_on"},
+    {"SourceKey": "facebook_s08e02_BarnaamijkaHage.parent", "PipelineKey": "facebook_s08e02_comment_reply_to_raw"},
+    {"SourceKey": "facebook_s08e02_BarnaamijkaHage.post", "PipelineKey": "facebook_s08e02_post_raw"},
+    
+    {"SourceKey": "facebook_s08e02_M2A-Media-Communication-Consultancy-548414038603623.message", "PipelineKey": "facebook_s08e02_raw"},
+    {"SourceKey": "facebook_s08e02_M2A-Media-Communication-Consultancy-548414038603623.id", "PipelineKey": "facebook_s08e02_comment_id"},
+    {"SourceKey": "facebook_s08e02_M2A-Media-Communication-Consultancy-548414038603623.created_time", "PipelineKey": "sent_on"},
+    {"SourceKey": "facebook_s08e02_M2A-Media-Communication-Consultancy-548414038603623.parent", "PipelineKey": "facebook_s08e02_comment_reply_to_raw"},
+    {"SourceKey": "facebook_s08e02_M2A-Media-Communication-Consultancy-548414038603623.post", "PipelineKey": "facebook_s08e02_post_raw"}
   ],
   "ProjectStartDate": "2000-01-01T00:00:00+03:00",
   "ProjectEndDate": "2100-01-01T00:00:00+03:00",
