--- a/configuration/sms_pipeline_config.json
+++ b/configuration/sms_pipeline_config.json
@@ -29,7 +29,8 @@
       "ContactsFileName": "csap_secondary_contacts",
       "ActivationFlowNames": [
         "csap_s08e01_activation",
-        "csap_s08e02_activation"
+        "csap_s08e02_activation",
+        "csap_s08e03_activation"
       ],
       "SurveyFlowNames": [
         "csap_s04_demog",
