Include Facebook user ids in the individuals file
Copied from https://github.com/AfricasVoices/Project-TIS-Plus/pull/29

--- a/configuration/sms_pipeline_config.json
+++ b/configuration/sms_pipeline_config.json
@@ -47,9 +47,10 @@
       ]
     }
   ],
-  "PhoneNumberUuidTable": {
+  "UuidTable": {
     "FirebaseCredentialsFileURL": "gs://avf-credentials/avf-id-infrastructure-firebase-adminsdk-6xps8-b9173f2bfd.json",
-    "TableName": "ADSS"
+    "TableName": "ADSS",
+    "UuidPrefix": "avf-phone-uuid-"
   },
   "SourceKeyRemappings": [
     {"SourceKey": "avf_phone_id", "PipelineKey": "uid"},
