--- a/configuration/facebook_pipeline_config.json
+++ b/configuration/facebook_pipeline_config.json
@@ -71,6 +71,11 @@
       ]
     }
   ],
+  "UuidTable": {
+     "FirebaseCredentialsFileURL": "gs://avf-credentials/avf-id-infrastructure-firebase-adminsdk-6xps8-b9173f2bfd.json",
+     "TableName": "USAID_IBTCI_facebook_avf_facebook_id",
+     "UuidPrefix": "avf-facebook-uuid-"
+   },
   "SourceKeyRemappings": [
     {"SourceKey": "avf_facebook_id", "PipelineKey": "uid"},
 
