--- a/configuration/facebook_pipeline_config.json
+++ b/configuration/facebook_pipeline_config.json
@@ -73,21 +73,21 @@
     },
     {
       "SourceType": "Facebook",
-      "PageID": "548414038603623",
+      "PageID": "M2amedia",
       "TokenFileURL": "gs://avf-credentials/M2A-Media-Communication-Consultancy-548414038603623-facebook-token.txt",
       "Datasets": [
-        {"Name": "facebook_s08e01_M2A-Media-Communication-Consultancy-548414038603623", "PostIDs": [
+        {"Name": "facebook_s08e01_M2amedia", "PostIDs": [
           "548414038603623_3190238431087824",
           "548414038603623_3196246417153692",
           "548414038603623_3199269190184748"
         ]},
-        {"Name": "facebook_s08e02_M2A-Media-Communication-Consultancy-548414038603623", "PostIDs": [
+        {"Name": "facebook_s08e02_M2amedia", "PostIDs": [
           "548414038603623_3209732449138422",
           "548414038603623_3215586821886318",
           "548414038603623_3218241841620816",
           "548414038603623_3223431354435198"
         ]},
-        {"Name": "facebook_s08e03_M2A-Media-Communication-Consultancy-548414038603623", "PostIDs": [
+        {"Name": "facebook_s08e03_M2amedia", "PostIDs": [
           "548414038603623_3228851770559823",
           "548414038603623_3236211706490496",
           "548414038603623_3242196812558652"
