--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-CoreDataModules = {editable = true,git = "https://www.github.com/AfricasVoices/CoreDataModules",ref = "master"}
+CoreDataModules = {editable = true,git = "https://www.github.com/AfricasVoices/CoreDataModules",ref = "master", extras=["mapping"]}
 PipelineInfrastructure = {editable = true,git = "https://www.github.com/AfricasVoices/Pipeline-Infrastructure",ref = "v0.0.12"}
-RapidProTools = {editable = true,git = "https://www.github.com/AfricasVoices/RapidProTools",ref = "v0.3.8"}
+RapidProTools = {editable = true,git = "https://www.github.com/AfricasVoices/RapidProTools",ref = "urn-type"}
 SocialMediaTools = {editable = true,git = "https://www.github.com/AfricasVoices/SocialMediaTools",ref = "v0.1.1"}
 pytz = "*"
 python-dateutil = ">=2.8.0"  # Need this minimum so that isoparse handles T24:00:00 correctly.
@@ -16,10 +16,6 @@ plotly = "*"
 requests = "*"  # Needed by plotly's image exporter.
 psutil = "*"  # Needed by plotly's image exporter.
 pandas = "*"  # Needed by plotly's express library.
-matplotlib = "*"  # Needed by geopandas to plot maps.
-geopandas = "*"
-descartes = "*"  # Needed by geopandas to plot polygons.
-mapclassify = "*"  # Needed by geopandas for choropleth classification
 
 [dev-packages]
 
